force-app/main/default/objects/Supertrump_Log__c/fields/Derived_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Derived_Product_Name__c</fullName>
    <label>Derived Product Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>