force-app/main/default/objects/Supertrump_Log__c/fields/LS_Contract__c.field-meta.xml
<CustomField>
    <fullName>LS_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LS Contract</label>
    <referenceTo>cllease__Lease_Account__c</referenceTo>
    <relationshipName>Supetrump_Log</relationshipName>
    <type>Lookup</type>
</CustomField>