force-app/main/default/objects/Supertrump_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>System Failure</fullName>
            </value>
            <value>
                <fullName>Callout Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>