force-app/main/default/objects/Supertrump_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LS_Contract__c</columns>
    <columns>Derived_Product_Name__c</columns>
    <columns>XML__c</columns>
    <columns>XML_Result__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>